Begin fixing up references

--- a/latex/ch1.tex
+++ b/latex/ch1.tex
@@ -12,9 +12,9 @@ Time-frequency analysis is performed by multiplying the signal being studied by 
 
 The STFT is subject to a fixed and bounded time-frequency resolution, such that one cannot be arbitrarily precise in both time and frequency, and must trade them off by changing the duration of the window (\cite{gabor1946, gabordiagrams}). Improving the fixed time-frequency resolution of the STFT-based spectrogram in the visualization and analysis of general audio is an important direction of research (\cite{bettertfres1, bettertfres2}).
 
-In the task of music source separation, or music demixing, a mixed song which is a linear mixture of several sources is split or \textit{de-mixed} back into its original sources (\cite{musicsepgood, musicsepsurvey}). Music demixing systems commonly split mixed songs into 4 sources: vocals, drums, bass, and other (guitar, piano, etc.), following the example of open mixing and demixing datasets (\cite{otherdataset1, otherdataset2, musdb18, musdb18hq}).
+In the task of music source separation, or music demixing, a mixed song which is a linear mixture of several sources is split or \textit{de-mixed} back into its original sources (\cite{musicsepgood, musicmask}). Music demixing systems commonly split mixed songs into 4 sources: vocals, drums, bass, and other (guitar, piano, etc.), following the example of open mixing and demixing datasets (\cite{otherdataset1, otherdataset2, musdb18, musdb18hq}).
 
-The STFT spectrogram is a popular tool used by various music demixing systems throughout the years (\cite{musicsepgood, musicsepsurvey, sisec2018, fitzgerald1, umx, plumbley1, plumbley2}). The tradeoff of time-frequency resolution is an important consideration in these systems (\cite{tftradeoff1, tftradeoff2}) Music demixing systems have been proposed that use multiple window sizes of STFT (\cite{fitzgerald2, driedger}) or that replace the STFT with different time-frequency transforms (\cite{fitzgerald2, cqtseparation, bettermusicsep}), to improve results through the manipulation of time-frequency resolution.
+The STFT spectrogram is a popular tool used by various music demixing systems throughout the years (\cite{musicsepgood, musicmask, sisec2018, fitzgerald1, umx, plumbley1, plumbley2}). The tradeoff of time-frequency resolution is an important consideration in these systems (\cite{tftradeoff1, tftradeoff2}) Music demixing systems have been proposed that use multiple window sizes of STFT (\cite{fitzgerald2, driedger}) or that replace the STFT with different time-frequency transforms (\cite{fitzgerald2, cqtseparation, bettermusicsep}), to improve results through the manipulation of time-frequency resolution.
 
 \subsection{Motivation}
 \label{sec:motivation}
