--- a/latex/report_refs.tex
+++ b/latex/report_refs.tex
@@ -6,7 +6,6 @@
 \usepackage{graphicx}
 \usepackage{xfrac}
 \usepackage{afterpage}
-\usepackage{todonotes}
 \usepackage{amsmath}
 \usepackage[titletoc,title]{appendix}
 \usepackage{amssymb}
@@ -43,6 +42,13 @@
 \setcounter{biburllcpenalty}{7000}
 \setcounter{biburlucpenalty}{8000}
 
+\AtEveryBibitem{\clearfield{issn}}
+\AtEveryCitekey{\clearfield{issn}}
+\AtEveryBibitem{\clearfield{isbn}}
+\AtEveryCitekey{\clearfield{isbn}}
+
+\DeclareFieldFormat[misc]{title}{\mkbibquote{#1}}
+
 \newenvironment{tight_enumerate}{
 \begin{enumerate}
   \setlength{\itemsep}{0pt}
@@ -62,13 +68,20 @@
   \addtolength\mintednumbersep{-\wd0}%
 }
 
-\newcommand{\ichfeedback}[1]{\todo[color=green!40,inline]{#1}}
-
-\newcommand{\chaptertodo}[1]{\todo[color=magenta!40,inline]{#1}}
-
 \newcommand{\newpagefill}{
 	\vfill
 	\clearpage
+}
+
+\DeclareCiteCommand{\secondaryciteauthor}{}{\printtext[bibhyperref]{\printnames{labelname}}}{}{}
+\DeclareCiteCommand{\secondaryciteyear}{}{\bibhyperref{\printdate}}{\multicitedelim}{}
+\newcommand{\secondarycitedirect}[2]{\secondaryciteauthor{#1} (\secondaryciteyear{#1}, cited in \secondaryciteauthor{#2}, \secondaryciteyear{#2})}
+\newcommand{\secondaryciteindirect}[2]{(\secondaryciteauthor{#1}, \secondaryciteyear{#1}, cited in \secondaryciteauthor{#2}, \secondaryciteyear{#2})}
+
+\newcounter{note}
+\newcommand{\note}[1] {
+    \stepcounter{note}
+    \footnotetext[\arabic{note}]{#1}
 }
 
 \title{\ThesisTitle}
@@ -87,42 +100,105 @@
 
 \maketitle
 
-%\newpagefill
-%
-%\subfile{ch0.tex}
-
 \newpagefill
 
-\tableofcontents
+\textcite{audiocnn2}
+
+\textcite{stftindie}
+
+\textcite{bettermusicsep}
+
+\textcite{cooleytukey}
+
+\textcite{slicq}
+
+\textcite{dictionary1}
+
+\textcite{timbretransients1}
+
+\textcite{dspfirst}
+
+\textcite{psycho2}
+
+\textcite{dftimportant}
+
+\textcite{discretebook}
+
+\textcite{melbook}
+
+\textcite{timbretransients2}
+
+\textcite{invertiblecqt}
+
+\textcite{klapuricqt}
+
+\textcite{fitzgeraldcqt}
+
+\textcite{fitzgerald1}
+
+\textcite{musdb18}
+
+\textcite{musdb18hq}
+
+\textcite{musicsepintro1}
+
+\textcite{masking}
+
+\textcite{vincent07}
+
+\textcite{transientsep}
+
+\textcite{irm}
+
+\textcite{pytorch}
+
+\textcite{gabordiagrams}
+
+\textcite{tftradeoff2}
+
+\textcite{dictionary}
+
+\textcite{speechmask}
+
+\textcite{musicmask}
+
+\textcite{dictionary2}
+
+\textcite{psycho1}
+
+\textcite{stftinvertible}
+
+\textcite{adaptivecqt}
+
+\textcite{demucs}
+
+\textcite{cqtransient}
+
+\textcite{lackinverse}
+
+\textcite{variableq1}
+
+\textcite{cqtseparation}
+
+\textcite{variableq2}
+
+\textcite{plumbley1}
+
+\textcite{plumbley2}
+
+\textcite{earlywarped1}
+
+\textcite{warped1}
+
+\textcite{warped2}
+
+\textcite{earlywarped2}
+
+\textcite{bettertfres1}
+
+\textcite{bettertfres2}
 
 \newpagefill
-
-\listoffigures
-
-\listoflistings
-
-\newpagefill
-
-%\subfile{ch1.tex}
-%
-%\newpagefill
-
-\setcounter{section}{1}
-\subfile{ch2.tex}
-
-\newpagefill
-%
-%\subfile{ch3.tex}
-%
-%\newpagefill
-%
-%\subfile{ch4.tex}
-%
-%\newpagefill
-%
-%\subfile{ch5.tex}
-%
-%\newpagefill
 
 %\nocite{*}
 \section{References}
