--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1,13 +1,58 @@
-@article{dftimportant,
-author = {Oberst, Ulrich},
-year = {2007},
-pages = {496--540},
-title = {The Fast Fourier Transform},
-volume = {46},
-journal = {SIAM J. Control and Optimization},
-doi = {10.1137/060658242}
+% KEEP THIS IN ALPHABETICAL ORDER
+
+@article{audiocnn2,
+  author    = {Sajjad Abdoli and
+               Patrick Cardinal and
+               Alessandro Lameiras Koerich},
+  title     = {End-to-end environmental sound classification using a 1D convolutional
+               neural network},
+  journal   = {Expert Systems with Applications},
+  %journal   = {Expert Syst. Appl.},
+  volume    = {136},
+  pages     = {252--263},
+  year      = {2019},
+  %url       = {https://doi.org/10.1016/j.eswa.2019.06.040},
+  doi       = {10.1016/j.eswa.2019.06.040},
 }
 
+@article{stftindie,
+	author={J. B. {Allen} and L. R. {Rabiner}},
+	journal={Proceedings of the IEEE},
+	title={A unified approach to short-time Fourier analysis and synthesis},
+	year={1977},
+	volume={65},
+	number={11},
+	pages={1558--1564},
+	doi={10.1109/PROC.1977.10770},
+}
+
+@inproceedings{speechmask,
+  author={Fahimeh Bahmaninezhad and Jian Wu and Rongzhi Gu and Shi-Xiong Zhang and Yong Xu and Meng Yu and Dong Yu},
+  title={{A comprehensive study of speech separation: spectrogram vs waveform separation}},
+  year={2019},
+  booktitle={Proceedings of Interspeech 2019},
+  pages={4574--4578},
+  doi={10.21437/Interspeech.2019-3181}
+}
+
+@article{earlywarped2,
+author={Carlo Braccini and Alan Oppenheim},
+journal={IEEE Transactions on Acoustics, Speech, and Signal Processing},
+title={Unequal bandwidth spectral analysis using digital frequency warping},
+year={1974},
+volume={22},
+number={4},
+pages={236--244},
+doi={10.1109/TASSP.1974.1162582}}
+
+@conference{bettermusicsep,
+  title={Comparison of frequency-warped representations for source separation of stereo mixtures},
+  author={Juan Jos{\'e} Burred and T. Sikora},
+  booktitle = {Audio Engineering Society Convention 121},
+  year={2006},
+  pages={1--8},
+  url={https://www.aes.org/e-lib/browse.cfm?elib=13758}
+}
 @article{cooleytukey,
 title = {An algorithm for the machine calculation of complex Fourier series},
 author = {James W. Cooley and John W. Tukey},
@@ -19,34 +64,216 @@ pages = {297--301},
 doi = {10.1090/S0025-5718-1965-0178586-1},
 }
 
-@book{melbook,
-author = {Rabiner, Lawrence and Schafer, Ronald},
-title = {Theory and Applications of Digital Speech Processing},
+@article{dictionary2,
+author = {Chen, Scott Shaobing and Donoho, David L. and Saunders, Michael A.},
+year = {2001},
+pages = {33--61},
+title = {Atomic decomposition by basis pursuit},
+volume = {20},
+number = {1},
+journal = {SIAM Journal on Scientific Computing}
+}
+
+@article{demucs,
+  title={Music source separation in the waveform domain},
+  author={D{\'e}fossez, Alexandre and Usunier, Nicolas and Bottou, L{\'e}on and Bach, Francis},
+  journal={arXiv preprint arXiv:1911.13254},
+  year={2019}
+}
+
+@conference{fitzgerald1,
+author = {Fitzgerald, Derry},
 year = {2010},
-isbn = {0136034284},
-publisher = {Prentice Hall Press},
+title = {Harmonic/percussive separation using median filtering},
+booktitle = {Proceedings of the 13th International Conference on Digital Audio Effects (DAFx-10)},
+url = {http://dafx10.iem.at/papers/DerryFitzGerald_DAFx10_P15.pdf}
+}
+
+@conference{fitzgeraldcqt,
+author = {Fitzgerald, Derry and Cranitch, Matt and Cychowski, Marcin},
+year = {2006},
+title = {Towards an inverse constant Q transform},
+booktitle = {Audio Engineering Society Convention 120},
+url = {http://www.aes.org/e-lib/browse.cfm?elib=13475}
+}
+
+@inbook{masking,
+author = {Gerkmann, Timo and Vincent, Emmanuel},
+year = {2018},
+pages = {65--85},
+title = {Spectral Masking and Filtering},
+booktitle = {Audio Source Separation and Speech Enhancement},
+publisher = {Wiley},
+chapter = {5},
+isbn = {9781119279891},
+doi = {10.1002/9781119279860.ch5},
+%url = {https://hal.inria.fr/hal-01881425/document}
+}
+
+@inproceedings{plumbley1,
+  author={Grais, Emad M. and Plumbley, Mark D.},
+  booktitle={IEEE Global Conference on Signal and Information Processing}, 
+  title={Single channel audio source separation using convolutional denoising autoencoders}, 
+  year={2017},
+  pages={1265--1269},
+  doi={10.1109/GlobalSIP.2017.8309164}
+}
+
+@inproceedings{plumbley2,
+author={Grais, Emad M. and Zhao, Fei and Plumbley, Mark D.},
+booktitle={28th European Signal Processing Conference},
+title={Multi-band multi-resolution fully convolutional neural networks for singing voice separation},
+year={2021},
+pages={261--265},
+doi={10.23919/Eusipco47968.2020.9287367}
+}
+
+@article{stftinvertible,
+author = {Heinzel, Gerhard and Rüdiger, Albrecht and Schilling, R.},
+year = {2002},
+title = {Spectrum and spectral density estimation by the Discrete Fourier transform (DFT), including a comprehensive list of window functions and some new flat-top windows},
+journal = {Max-Planck-Institut f{\"u}r Gravitationsphysik}
+}
+
+@article{slicq,
+author={Holighaus, Nicki and Dörfler, Monika and Velasco, Gino Angelo and Grill, Thomas},
+journal={IEEE Transactions on Audio, Speech, and Language Processing},
+title={A framework for invertible, real-time constant-Q transforms},
+year={2013},
+volume={21},
+number={4},
+pages={775--785},
+doi={10.1109/TASL.2012.2234114}}
+
+@inproceedings{lackinverse,
+author={Hu, Peng and Yan, Qin and Dong, Luan and Liu, Meng},
+booktitle={22nd European Signal Processing Conference},
+title={An improved patchwork-based digital audio watermarking in CQT domain},
+year={2014},
+pages={920--923}
+}
+
+@inproceedings{variableq2,
+author = {Huang, Dong-Yan and Dong, Minghui and Li, Haizhou},
+year = {2015},
+pages = {2744--2748},
+title = {A real-time variable-Q non-stationary Gabor transform for pitch shifting},
+booktitle = {Proceedings of Interspeech 2015},
+doi = {10.21437/Interspeech.2015-578}
+}
+
+@inbook{irm,
+author = {Hummersone, Christopher and Stokes, Toby and Brookes, Tim},
+year = {2014},
+pages = {349--368},
+title = {On the ideal ratio mask as the goal of computational auditory scene analysis},
+booktitle = {Blind Source Separation: Advances in Theory, Algorithms, and Applications},
+chapter = {12},
+editor = {Naik, Ganesh R. and Wang Wenwu},
+publisher = {Springer-Verlag},
+isbn = {978-3-642-55015-7},
+doi = {10.1007/978-3-642-55016-4_12}
+}
+
+@conference{transientsep,
+author={J. {Janer} and R. {Marxer} and K. {Arimoto}},
+booktitle={IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+title={Combining a harmonic-based NMF decomposition with transient analysis for instantaneous percussion separation},
+year={2012},
+pages={281--284},
+doi={10.1109/ICASSP.2012.6287872}}
+
+@inproceedings{tftradeoff2,
+  author    = {Ilya Kavalerov and
+               Scott Wisdom and
+               Hakan Erdogan and
+               Brian Patton and
+               Kevin W. Wilson and
+               Jonathan Le Roux and
+               John R. Hershey},
+  title     = {Universal sound separation},
+  booktitle = {2019 {IEEE} Workshop on Applications of Signal Processing to Audio
+               and Acoustics},
+  pages     = {175--179},
+  publisher = {{IEEE}},
+  year      = {2019},
+  doi       = {10.1109/WASPAA.2019.8937253},
+}
+
+@book{gabordiagrams,
+author = {Kutz, J. Nathan},
+title = {Data-driven modeling \& scientific computation: methods for complex systems},
+year = {2013},
+isbn = {0199660344},
+publisher = {Oxford University Press},
+edition = {1},
 address = {USA},
-edition = {1st},
 }
 
-@book{discretebook,
-  author = {Oppenheim, Alan V. and Schafer, Ronald W. and Buck, John R.},
-  edition = {2nd},
-  keywords = {dft dsp hilbert oppenheim signal.processing textbook},
-  publisher = {Prentice-hall Englewood Cliffs},
-  title = {Discrete-Time Signal Processing},
-  year = {1999},
+@conference{musicmask,
+author = {Liu, Ruolun and Li, Suping},
+year = {2009},
+title = {A review on music source separation},
+booktitle = {IEEE Youth Conference on Information, Computing and Telecommunication},
+pages = {343--346},
+doi = {10.1109/YCICT.2009.5382353}
 }
 
-@book{dspfirst,
-author = {McClellan, James H. and Schafer, Ronald W. and Yoder, M. A.},
-title={Signal Processing First},
-publisher={Pearson/Prentice Hall Upper Saddle River, NJ},
-year={2003}}
+@article{adaptivecqt,
+author = {Liuni, Marco and Roebel, Axel and Matusiak, Ewa and Romito, Marco and Rodet, Xavier},
+year = {2013},
+title = {Automatic adaptation of the time-frequency resolution for sound analysis and re-synthesis},
+volume = {21},
+number = {5},
+pages = {959--970},
+journal = {IEEE Transactions on Audio Speech and Language Processing},
+doi = {10.1109/TASL.2013.2239989},
+%url = {https://arpi.unipi.it/retrieve/handle/11568/159584/458549/tasl.pdf}
+}
+
+@conference{bettertfres1,
+author = {Lukin, Alexey and Todd, Jeremy},
+year = {2006},
+title = {Adaptive time-frequency resolution for analysis and processing of audio},
+booktitle = {Audio Engineering Society Convention 120},
+url = {http://www.aes.org/e-lib/browse.cfm?elib=13521}
+}
+
+@article{warped1,
+author={Anamitra Makur and Sanjit K. Mitra},
+journal={IEEE Transactions on Circuits and Systems I: Fundamental Theory and Applications},
+title={Warped discrete-Fourier transform: Theory and applications},
+year={2001},
+volume={48},
+number={9},
+pages={1086--1093},
+doi={10.1109/81.948436}}
+
+@article{warped2,
+author={Anamitra Makur},
+journal={IEEE Transactions on Circuits and Systems I: Regular Papers},
+title={Computational Schemes for Warped DFT and Its Inverse},
+year={2008},
+volume={55},
+number={9},
+pages={2686--2695},
+doi={10.1109/TCSI.2008.921023}}
+
+@article{dictionary1,
+author = {Mallat, S.G. and Zhang, Zhifeng},
+title = {Matching pursuits with time-frequency dictionaries},
+year = {1993},
+publisher = {IEEE Press},
+volume = {41},
+number = {12},
+doi = {10.1109/78.258082},
+journal = {IEEE Transactions on Signal Processing},
+pages = {3397--3415},
+}
 
 @incollection{timbretransients1,
   author    = {Stephen McAdams},
-  title     = {The Perceptual Representation of Timbre},
+  title     = {The perceptual representation of timbre},
   booktitle = {Timbre: Acoustics, Perception, and Cognition},
   publisher = {Springer},
   year      = {2019},
@@ -54,58 +281,128 @@ year={2003}}
   volume    = {69},
   series    = {Springer Handbook of Auditory Research},
   chapter   = {2},
-  pages     = {26},
-  url = {https://www.mcgill.ca/mpcl/files/mpcl/mcadams_2019_timbreacoustperceptcogn_ch2.pdf}
+  pages     = {23--57},
+  doi = {10.1007/978-3-030-14832-4_2},
+  %url = {https://www.mcgill.ca/mpcl/files/mpcl/mcadams_2019_timbreacoustperceptcogn_ch2.pdf}
 }
 
+@book{dspfirst,
+author = {McClellan, James H. and Schafer, Ronald W. and Yoder, M. A.},
+title={Signal processing first},
+publisher={Pearson Prentice Hall},
+year={2003},
+edition={International},
+}
 
-@article{timbretransients2,
-author = {Siedenburg, Kai},
-year = {2019},
-pages = {1078--1087},
-title = {Specifying the perceptual relevance of onset transients for musical instrument identification},
-volume = {145},
+@article{psycho2,
+author = {Moore, Brian C. J.},
+title = {Frequency difference limens for short‐duration tones},
 journal = {The Journal of the Acoustical Society of America},
-doi = {10.1121/1.5091778}
+volume = {54},
+number = {3},
+pages = {610--619},
+year = {1973},
+doi = {10.1121/1.1913640},
+%URL = {https://doi.org/10.1121/1.1913640},
+%eprint = {https://doi.org/10.1121/1.1913640}
 }
 
-@article{bettermusicsep,
-  title={Comparison of Frequency-Warped Representations for Source Separation of Stereo Mixtures},
-  author={Juan Jos{\'e} Burred and T. Sikora},
-  journal={Journal of The Audio Engineering Society},
-  year={2006}
+@article{bettertfres2,
+author = {Nisar, Shibli and Khan, Omar and Tariq, Muhammad},
+year = {2016},
+pages = {1--13},
+title = {An efficient adaptive window size selection method for improving spectrogram visualization},
+volume = {2016},
+number = {2},
+journal = {Computational Intelligence and Neuroscience},
+doi = {10.1155/2016/6172453}
 }
 
-@misc{invertiblecqt,
-url = {https://www.univie.ac.at/nonstatgab/pdf_files/dohogrve11_amsart.pdf},
-author = {Velasco, Gino Angelo and Holighaus, Nicki and Doerfler, Monika and Grill, Thomas},
-year = {2011},
-title = {Constructing an invertible constant-Q transform with nonstationary Gabor frames},
-journal = {Proceedings of the 14th International Conference on Digital Audio Effects, DAFx 2011}
+@article{dftimportant,
+  author    = {Ulrich Oberst},
+  title     = {The Fast Fourier transform},
+  %journal   = {{SIAM} J. Control. Optim.},
+  journal   = {{SIAM} Journal on Control and Optimization},
+  volume    = {46},
+  number    = {2},
+  pages     = {496--540},
+  year      = {2007},
+  %url       = {https://doi.org/10.1137/060658242},
+  doi       = {10.1137/060658242},
 }
 
-@inproceedings{klapuricqt,
-  title        = {Constant-Q Transform Toolbox for Music Processing},
-  author = {Christian Sch{\"o}rkhuber and Anssi Klapuri},
-  year         = {2010},
-  doi          = {10.5281/zenodo.849741},
-  booktitle = {7th Sound and Music Computing Conference (SMC2010)}
+@article{earlywarped1,
+author={Alan Oppenheim and Don Johnson and Kenneth Steiglitz},
+journal={Proceedings of the IEEE},
+title={Computation of spectra with unequal resolution using the fast Fourier transform},
+year={1971},
+volume={59},
+number={2},
+pages={299--301},
+doi={10.1109/PROC.1971.8146}}
+
+@book{discretebook,
+  author = {Oppenheim, Alan V. and Schafer, Ronald W. and Buck, John R.},
+  edition = {2nd},
+  publisher = {Pearson Prentice Hall},
+  title = {Discrete-time signal processing},
+  year = {1999},
 }
 
-@article{fitzgeraldcqt,
-author = {Fitzgerald, Derry and Cranitch, Matt and Cychowski, Marcin},
+@article{psycho1,
+author = {Oppenheim, Jacob and Magnasco, Marcelo},
 year = {2012},
-title = {Towards an inverse constant Q transform},
-volume = {1},
-journal = {Audio Engineering Society - 120th Convention Spring Preprints 2006}
+title = {Human time-frequency acuity beats the Fourier uncertainty principle},
+volume = {110},
+number = {4},
+pages = {4--25},
+journal = {Physical Review Letters},
+doi = {10.1103/PhysRevLett.110.044301}
 }
 
-@article{fitzgerald1,
-author = {Fitzgerald, Derry},
+@inproceedings{pytorch,
+  author    = {Adam Paszke and
+               Sam Gross and
+               Francisco Massa and
+               Adam Lerer and
+               James Bradbury and
+               Gregory Chanan and
+               Trevor Killeen and
+               Zeming Lin and
+               Natalia Gimelshein and
+               Luca Antiga and
+               Alban Desmaison and
+               Andreas K{\"{o}}pf and
+               Edward Yang and
+               Zachary DeVito and
+               Martin Raison and
+               Alykhan Tejani and
+               Sasank Chilamkurthy and
+               Benoit Steiner and
+               Lu Fang and
+               Junjie Bai and
+               Soumith Chintala},
+  editor    = {Hanna M. Wallach and
+               Hugo Larochelle and
+               Alina Beygelzimer and
+               Florence d'Alch{\'{e}}{-}Buc and
+               Emily B. Fox and
+               Roman Garnett},
+  title     = {PyTorch: an imperative style, high-performance deep learning library},
+  booktitle = {Advances in Neural Information Processing Systems 32: Annual Conference on Neural Information Processing Systems 2019},
+  pages     = {8024--8035},
+  year      = {2019},
+  url       = {https://proceedings.neurips.cc/paper/2019/hash/bdbca288fee7f92f2bfa9f7012727740-Abstract.html},
+}
+
+@book{melbook,
+author = {Rabiner, Lawrence and Schafer, Ronald},
+title = {Theory and applications of digital speech processing},
 year = {2010},
-title = {Harmonic/Percussive Separation using Median Filtering},
-journal = {13th International Conference on Digital Audio Effects (DAFx-10)},
-url = {http://dafx10.iem.at/papers/DerryFitzGerald_DAFx10_P15.pdf}
+isbn = {0136034284},
+publisher = {Pearson Prentice Hall},
+address = {USA},
+edition = {1st},
 }
 
 @misc{musdb18,
@@ -119,276 +416,108 @@ url = {http://dafx10.iem.at/papers/DerryFitzGerald_DAFx10_P15.pdf}
   doi          = {10.5281/zenodo.1117372},
 }
 
-@inbook{masking,
-author = {Gerkmann, Timo and Vincent, Emmanuel},
-year = {2018},
-pages = {65-85},
-title = {Spectral Masking and Filtering},
-isbn = {9781119279891},
-doi = {10.1002/9781119279860.ch5},
-url = {https://hal.inria.fr/hal-01881425/document}
+@misc{musdb18hq,
+  author       = {Rafii, Zafar and
+                  Liutkus, Antoine and
+                  Stöter, Fabian-Robert and
+                  Mimilakis, Stylianos Ioannis and
+                  Bittner, Rachel},
+  title        = {MUSDB18-HQ: an uncompressed version of MUSDB18},
+  year         = {2019},
+  doi          = {10.5281/zenodo.3338373},
 }
 
-@article{vincent07,
-author = {Vincent, Emmanuel and Gribonval, Rémi and Plumbley, Mark},
-year = {2007},
-pages = {1933-1950},
-title = {Oracle estimators for the benchmarking of source separation algorithms},
-volume = {87},
-journal = {Signal Processing},
-doi = {10.1016/j.sigpro.2007.01.016}
-}
-
-@inproceedings{transientsep,
-author={J. {Janer} and R. {Marxer} and K. {Arimoto}},
-booktitle={2012 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
-title={Combining a harmonic-based NMF decomposition with transient analysis for instantaneous percussion separation},
-year={2012},
-pages={281-284},
-doi={10.1109/ICASSP.2012.6287872}}
-
-@inbook{irm,
-author = {Hummersone, Christopher and Stokes, Toby and Brookes, Tim},
-year = {2014},
-pages = {349-368},
-title = {On the Ideal Ratio Mask as the Goal of Computational Auditory Scene Analysis},
-isbn = {978-3-642-55015-7},
-doi = {10.1007/978-3-642-55016-4_12}
-}
-
-@incollection{pytorch,
-title = {PyTorch: An Imperative Style, High-Performance Deep Learning Library},
-author = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and Desmaison, Alban and Kopf, Andreas and Yang, Edward and DeVito, Zachary and Raison, Martin and Tejani, Alykhan and Chilamkurthy, Sasank and Steiner, Benoit and Fang, Lu and Bai, Junjie and Chintala, Soumith},
-booktitle = {Advances in Neural Information Processing Systems 32},
-editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
-pages = {8024--8035},
-year = {2019},
-publisher = {Curran Associates, Inc.},
-url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-performance-deep-learning-library.pdf}
-}
-
-@misc{speechmask,
-      title={A comprehensive study of speech separation: spectrogram vs waveform separation}, 
-      author={Fahimeh Bahmaninezhad and Jian Wu and Rongzhi Gu and Shi-Xiong Zhang and Yong Xu and Meng Yu and Dong Yu},
-      year={2019},
-      eprint={1905.07497},
-      archivePrefix={arXiv},
-      primaryClass={cs.SD}
-}
-
-@article{musicmask,
-author = {Liu, Ruolun and Li, Suping},
-year = {2009},
-title = {A review on music source separation},
-journal = {Proceedings - 2009 IEEE Youth Conference on Information, Computing and Telecommunication, YC-ICT2009},
-doi = {10.1109/YCICT.2009.5382353}
+@article{musicsepintro1,
+  author={Rafii, Zafar and Liutkus, Antoine and Stöter, Fabian-Robert and Mimilakis, Stylianos Ioannis and FitzGerald, Derry and Pardo, Bryan},
+  journal={IEEE/ACM Transactions on Audio, Speech, and Language Processing},
+  title={An overview of lead and accompaniment separation in music},
+  year={2018},
+  volume={26},
+  number={8},
+  pages={1307--1335},
+  doi={10.1109/TASLP.2018.2825440},
 }
 
 @article{dictionary,
 author = {Rubinstein, Ron and Bruckstein, Alfred and Elad, Michael},
 year = {2010},
-pages = {1045 - 1057},
-title = {Dictionaries for Sparse Representation Modeling},
+pages = {1045--1057},
+title = {Dictionaries for sparse representation modeling},
 volume = {98},
+number = {6},
 journal = {Proceedings of the IEEE},
 doi = {10.1109/JPROC.2010.2040551},
-url = {https://www.cs.technion.ac.il/~ronrubin/Publications/dictdesign.pdf}
+%url = {https://www.cs.technion.ac.il/~ronrubin/Publications/dictdesign.pdf}
 }
 
-@article{dictionary1,
-author = {Mallat, S.G. and Zhang, Zhifeng},
-title = {Matching Pursuits with Time-Frequency Dictionaries},
-year = {1993},
-publisher = {IEEE Press},
-volume = {41},
-number = {12},
-issn = {1053-587X},
-doi = {10.1109/78.258082},
-journal = {Trans. Sig. Proc.},
-pages = {3397–3415},
+@conference{klapuricqt,
+  title        = {Constant-Q transform toolbox for music processing},
+  author = {Christian Sch{\"o}rkhuber and Anssi Klapuri},
+  year         = {2010},
+  doi          = {10.5281/zenodo.849741},
+  booktitle = {7th Sound and Music Computing Conference (SMC2010)}
 }
 
-@article{dictionary2,
-author = {Chen, S.S. and Donoho, D. and Saunders, Michael},
-year = {2001},
-pages = {33-61},
-title = {Atomic decomposition by basis pursuit[J]},
-volume = {43},
-journal = {Siam Review}
+@conference{variableq1,
+title = {A Matlab toolbox for efficient perfect reconstruction time-frequency transforms with log-frequency resolution},
+author = {Christian Sch{\"o}rkhuber and Anssi Klapuri and Nicki Holighaus and Monika D{\"o}rfler},
+year = {2014},
+booktitle = {Audio Engineering Society Conference: 53rd International Conference: Semantic Audio},
+pages = {1--8},
+url = {http://www.aes.org/e-lib/browse.cfm?elib=17112}
 }
 
-@article{psycho1,
-author = {Oppenheim, Jacob and Magnasco, Marcelo},
-year = {2012},
-title = {Human Time-Frequency Acuity Beats the Fourier Uncertainty Principle},
-volume = {110},
-journal = {Physical Review Letters},
-doi = {10.1103/PhysRevLett.110.044301}
-}
-
-@article{psycho2,
-author = {Moore,B. C. J. },
-title = {Frequency difference limens for short‐duration tones},
-journal = {The Journal of the Acoustical Society of America},
-volume = {54},
-number = {3},
-pages = {610--619},
-year = {1973},
-doi = {10.1121/1.1913640},
-URL = {https://doi.org/10.1121/1.1913640},
-eprint = {https://doi.org/10.1121/1.1913640}}
-
-@book{gabordiagrams,
-author = {Kutz, J. Nathan},
-title = {Data-Driven Modeling \& Scientific Computation: Methods for Complex Systems},
-year = {2013},
-isbn = {0199660344},
-publisher = {Oxford University Press, Inc.},
-address = {USA},
-pages = {336--338},
-}
-
-@article{stftinvertible,
-author = {Heinzel, Gerhard and Rüdiger, Albrecht and Schilling, R},
-year = {2002},
-title = {Spectrum and spectral density estimation by the Discrete Fourier transform (DFT), including a comprehensive list of window functions and some new flat-top windows},
-volume = {12},
-journal = {Max Plank Inst}
-}
-
-@article{adaptivecqt,
-author = {Liuni, Marco and Roebel, Axel and Matusiak, Ewa and Romito, Marco and Rodet, Xavier},
-year = {2013},
-title = {Automatic Adaptation of the Time-Frequency Resolution for Sound Analysis and Re-Synthesis},
-volume = {21},
-journal = {IEEE Transactions on Audio Speech and Language Processing},
-doi = {10.1109/TASL.2013.2239989},
-url = {https://arpi.unipi.it/retrieve/handle/11568/159584/458549/tasl.pdf}
-}
-
-@inproceedings{tftradeoff2,
-  author    = {Ilya Kavalerov and
-               Scott Wisdom and
-               Hakan Erdogan and
-               Brian Patton and
-               Kevin W. Wilson and
-               Jonathan Le Roux and
-               John R. Hershey},
-  title     = {Universal Sound Separation},
-  booktitle = {2019 {IEEE} Workshop on Applications of Signal Processing to Audio
-               and Acoustics, {WASPAA} 2019, New Paltz, NY, USA, October 20-23, 2019},
-  pages     = {175--179},
-  publisher = {{IEEE}},
-  year      = {2019},
-  doi       = {10.1109/WASPAA.2019.8937253},
-}
-
-@article{demucs,
-  title={Music Source Separation in the Waveform Domain},
-  author={D{\'e}fossez, Alexandre and Usunier, Nicolas and Bottou, L{\'e}on and Bach, Francis},
-  journal={arXiv preprint arXiv:1911.13254},
-  year={2019}
-}
-
-@article{sparsitykowalski,
-author = {Kowalski, Matthieu and Torrésani, Bruno},
-year = {2009},
-title = {Sparsity and persistence: Mixed norms provide simple signal models with dependent coefficients},
-volume = {3},
-journal = {Signal Image and Video Processing},
-doi = {10.1007/s11760-008-0076-1}
-}
-
-@article{sparsitykowalski2,
-author = {Kowalski, Matthieu and Torrésani, Bruno},
-year = {2009},
-title = {Structured Sparsity: from Mixed Norms to Structured Shrinkage},
-volume = {53},
-journal = {SPARS09-Signal Processing with Adaptive Sparse Structured Representations}}
-
-@inproceedings{cqtransient,
+@conference{cqtransient,
 author = {Schörkhuber, Christian and Klapuri, Anssi and Sontacchi, Alois},
 year = {2012},
 title = {Pitch shifting of audio signals using the constant-Q transform},
-journal = {Proceedings of the 15th International Conference on Digital Audio Effects, DAFx 2012}
+pages = {1--8},
+booktitle = {Proceedings of the 15th International Conference on Digital Audio Effects (DAFx-12)}
 }
 
-@inproceedings{lackinverse,
-author={Hu, Peng and Yan, Qin and Dong, Luan and Liu, Meng},
-booktitle={2014 22nd European Signal Processing Conference (EUSIPCO)},
-title={An improved patchwork-based digital audio watermarking in CQT domain},
-year={2014},
-pages={920-923}
+@article{cqtseparation,
+	title = {Is CQT more suitable for monaural speech separation than STFT? an empirical study.},
+	year = {2019},
+	journal = {arXiv preprint arXiv:1902.00631},
+	author = {{Shi, Ziqiang} and {Huibin Lin} and {Liu Liu} and {Rujie Liu} and {Jiqing Han}}
 }
 
-@inproceedings{variableq1,
-title = "A Matlab Toolbox for Efficient Perfect Reconstruction Time-Frequency Transforms with Log-Frequency Resolution,",
-author = {Christian Sch{\"o}rkhuber and Anssi Klapuri and Nicki Holighaus and Monika D{\"o}rfler},
-year = {2014},
-booktitle = {AES 53rd International Conference on Semantic Audio},
-publisher = {Audio Engineering Society},
-pages = {1--8}
-}
-
-@inproceedings{cqtseparation,
-author = {Shi, Ziqiang and Lin, Huibin and Liu, Liu and Liu, Rujie and Han, Jiqing},
+@article{timbretransients2,
+author = {Siedenburg, Kai},
 year = {2019},
-title = {Is CQT more suitable for monaural speech separation than STFT? an empirical study},
+pages = {1078--1087},
+title = {Specifying the perceptual relevance of onset transients for musical instrument identification},
+volume = {145},
+number = {2},
+journal = {The Journal of the Acoustical Society of America},
+%journal = {J Acoust Soc Am.},
+doi = {10.1121/1.5091778}
 }
 
-@inproceedings{variableq2,
-author = {Huang, Dong-Yan and Dong, Minghui and Li, Haizhou},
-year = {2015},
-title = {A Real-Time Variable-Q Non-Stationary Gabor Transform for Pitch Shifting},
-booktitle = {INTERSPEECH -- 16th Annual Conference of the International Speech Communication Association}
+@conference{invertiblecqt,
+author = {Velasco, Gino Angelo and Holighaus, Nicki and Doerfler, Monika and Grill, Thomas},
+year = {2011},
+title = {Constructing an invertible constant-Q transform with nonstationary Gabor frames},
+booktitle = {Proceedings of the 14th International Conference on Digital Audio Effects (DAFx-11)},
+url = {https://www.univie.ac.at/nonstatgab/pdf_files/dohogrve11_amsart.pdf},
 }
 
-@misc{plumbley1,
-      title={Single Channel Audio Source Separation using Convolutional Denoising Autoencoders}, 
-      author={Emad M. Grais and Mark D. Plumbley},
-      year={2017},
-      eprint={1703.08019},
-      archivePrefix={arXiv},
-      primaryClass={cs.SD}
+@article{vincent07,
+author = {Vincent, Emmanuel and Gribonval, Rémi and Plumbley, Mark},
+year = {2007},
+pages = {1933--1950},
+title = {Oracle estimators for the benchmarking of source separation algorithms},
+volume = {87},
+number = {8},
+journal = {Signal Processing},
+doi = {10.1016/j.sigpro.2007.01.016}
 }
 
-@misc{plumbley2,
-      title={Multi-Band Multi-Resolution Fully Convolutional Neural Networks for Singing Voice Separation}, 
-      author={Emad M. Grais and Fei Zhao and Mark D. Plumbley},
-      year={2019},
-      eprint={1910.09266},
-      archivePrefix={arXiv},
-      primaryClass={cs.SD}
-}
-
-@inproceedings{musicsepsurvey,
-author={Ruolun Liu and Suping Li},
-booktitle={2009 IEEE Youth Conference on Information, Computing and Telecommunication},
-title={A review on music source separation},
-year={2009},
-volume={},
-number={},
-pages={343-346},
-doi={10.1109/YCICT.2009.5382353}
-}
-
-@article{bettertfres1,
-author = {Lukin, Alexey and Todd, Jeremy},
-year = {2006},
-title = {Adaptive Time-Frequency Resolution for Analysis and Processing of Audio},
-volume = {4},
-journal={Journal of the Audio Engineering Society},
-}
-
-@article{bettertfres2,
-author = {Nisar, Shibli and Khan, Omar and Tariq, Muhammad},
-year = {2016},
-pages = {1-13},
-title = {An Efficient Adaptive Window Size Selection Method for Improving Spectrogram Visualization},
-volume = {2016},
-journal = {Computational Intelligence and Neuroscience},
-doi = {10.1155/2016/6172453}
-}
+%%%%%%%%%%%%%%
+% REVIEWED ^ %
+%            %
+% TODO     v %
+%%%%%%%%%%%%%%
 
 @inproceedings{
   otherdataset1,
@@ -417,47 +546,6 @@ doi = {10.1155/2016/6172453}
   doi          = {10.5281/zenodo.1649325},
   url          = {https://doi.org/10.5281/zenodo.1649325}
 }
-
-
-@article{warped1,
-author={Anamitra Makur and Sanjit K. Mitra},
-journal={IEEE Transactions on Circuits and Systems I: Fundamental Theory and Applications},
-title={Warped discrete-Fourier transform: Theory and applications},
-year={2001},
-volume={48},
-number={9},
-pages={1086--1093},
-doi={10.1109/81.948436}}
-
-@article{warped2,
-author={Anamitra Makur},
-journal={IEEE Transactions on Circuits and Systems I: Regular Papers},
-title={Computational Schemes for Warped DFT and Its Inverse},
-year={2008},
-volume={55},
-number={9},
-pages={2686--2695},
-doi={10.1109/TCSI.2008.921023}}
-
-@article{earlywarped1,
-author={Alan Oppenheim and Don Johnson and Kenneth Steiglitz},
-journal={Proceedings of the IEEE},
-title={Computation of spectra with unequal resolution using the fast Fourier transform},
-year={1971},
-volume={59},
-number={2},
-pages={299--301},
-doi={10.1109/PROC.1971.8146}}
-
-@article{earlywarped2,
-author={Carlo Braccini and Alan Oppenheim},
-journal={IEEE Transactions on Acoustics, Speech, and Signal Processing},
-title={Unequal bandwidth spectral analysis using digital frequency warping},
-year={1974},
-volume={22},
-number={4},
-pages={236--244},
-doi={10.1109/TASSP.1974.1162582}}
 
 @inproceedings{warpedcomparison,
 author={Stefan Wabnik and Gerald Schuller and Ulrich Kr{\"a}mer and Jens Hirschfeld},
@@ -654,7 +742,7 @@ doi = {10.1007/BF00348431}
 author = {Dongarra, Jack and Sullivan, Francis},
 year = {2000},
 title = {Top ten algorithms of the century},
-journal = {Computing in Science and Engineering - C in S\&E}
+journal = {Computing in Science and Engineering}
 }
 
 @article{korpel,
@@ -687,19 +775,8 @@ author = {Hill, Peter},
 year = {2007},
 pages = {2632--2637},
 title = {Dennis Gabor: Contributions to communication theory \ signal processing},
-journal = {EUROCON 2007 - The International Conference on Computer as a Tool},
+journal = {EUROCON 2007: The International Conference on Computer as a Tool},
 doi = {10.1109/EURCON.2007.4400546}}
-
-@article{stftindie,
-	author={J. B. {Allen} and L. R. {Rabiner}},
-	journal={Proceedings of the IEEE},
-	title={A unified approach to short-time Fourier analysis and synthesis},
-	year={1977},
-	volume={65},
-	number={11},
-	pages={1558-1564},
-	doi={10.1109/PROC.1977.10770},
-}
 
 @article{hallm,
    author = "Hall, M.",
@@ -920,7 +997,7 @@ journal = {Proceedings of the 28th International Conference on Machine Learning 
 @article{musicsp,
 author = {Müller, Meinard and Ellis, Daniel and Klapuri, Anssi and Richard, Gaël},
 year = {2011},
-pages = {1088 - 1110},
+pages = {1088--1110},
 title = {Signal Processing for Music Analysis},
 volume = {5},
 journal = {Selected Topics in Signal Processing, IEEE Journal of},
@@ -1063,15 +1140,6 @@ pages = {II-661 },
 title = {Incorporating Phase Information for Source Separation via Spectrogram Factorization},
 volume = {2},
 doi = {10.1109/ICASSP.2007.366322}
-}
-
-@misc{audiocnn2,
-      title={End-to-End Environmental Sound Classification using a 1D Convolutional Neural Network}, 
-      author={Sajjad Abdoli and Patrick Cardinal and Alessandro Lameiras Koerich},
-      year={2019},
-      eprint={1904.08990},
-      archivePrefix={arXiv},
-      primaryClass={cs.SD}
 }
 
 @inproceedings{bock1,
@@ -1308,7 +1376,7 @@ doi = {10.1002/9780470061602.eqf13003}
 author = {van der Walt, Stéfan and Colbert, S. and Varoquaux, Gael},
 year = {2011},
 month = {05},
-pages = {22 - 30},
+pages = {22--30},
 title = {The NumPy Array: A Structure for Efficient Numerical Computation},
 volume = {13},
 journal = {Computing in Science \& Engineering},
@@ -1423,15 +1491,6 @@ year = {2015},
 title = {Time-frequency trade-offs for audio source separation with binary masks}
 }
 
-@article{slicq,
-author={Holighaus, Nicki and Dörfler, Monika and Velasco, Gino Angelo and Grill, Thomas},
-journal={IEEE Transactions on Audio, Speech, and Language Processing},
-title={A framework for invertible, real-time constant-Q transforms},
-year={2013},
-volume={21},
-number={4},
-pages={775--785},
-doi={10.1109/TASL.2012.2234114}}
 
 @phdthesis{doerflerphd,
 author = {D{\"o}rfler, Monika},
@@ -1494,16 +1553,6 @@ pages={1--4},
 doi={10.1109/WIAMIS.2013.6616139},
 url={https://hal.archives-ouvertes.fr/hal-00958661/document}}
 
-@article{musicsepintro1,
-  author={Rafii, Zafar and Liutkus, Antoine and Stöter, Fabian-Robert and Mimilakis, Stylianos Ioannis and FitzGerald, Derry and Pardo, Bryan},
-  journal={IEEE/ACM Transactions on Audio, Speech, and Language Processing},
-  title={An overview of lead and accompaniment separation in music},
-  year={2018},
-  volume={26},
-  number={8},
-  pages={1307--1335},
-  doi={10.1109/TASLP.2018.2825440},
-}
 
 @inproceedings{driedger,
   author    = {Jonathan Driedger and Meinard M{\"u}ller and Sascha Disch},
@@ -1531,16 +1580,6 @@ year={2014},
 pages={1--6},
 doi={10.1109/MLSP.2014.6958893}}
 
-@article{musdb18hq,
-  author       = {Rafii, Zafar and
-                  Liutkus, Antoine and
-                  Stöter, Fabian-Robert and
-                  Mimilakis, Stylianos Ioannis and
-                  Bittner, Rachel},
-  title        = {MUSDB18-HQ: an uncompressed version of MUSDB18},
-  year         = {2019},
-  doi          = {10.5281/zenodo.3338373},
-}
 
 @article{bss,
 author = {Vincent, Emmanuel and Gribonval, Rémi and Févotte, Cédric},
