--- a/latex/report.tex
+++ b/latex/report.tex
@@ -6,7 +6,6 @@
 \usepackage{graphicx}
 \usepackage{xfrac}
 \usepackage{afterpage}
-\usepackage{todonotes}
 \usepackage{amsmath}
 \usepackage[titletoc,title]{appendix}
 \usepackage{amssymb}
@@ -43,6 +42,13 @@
 \setcounter{biburllcpenalty}{7000}
 \setcounter{biburlucpenalty}{8000}
 
+\AtEveryBibitem{\clearfield{issn}}
+\AtEveryCitekey{\clearfield{issn}}
+\AtEveryBibitem{\clearfield{isbn}}
+\AtEveryCitekey{\clearfield{isbn}}
+
+\DeclareFieldFormat[misc]{title}{\mkbibquote{#1}}
+
 \newenvironment{tight_enumerate}{
 \begin{enumerate}
   \setlength{\itemsep}{0pt}
@@ -61,10 +67,6 @@
   \setlength\mintednumbersep{8pt}%
   \addtolength\mintednumbersep{-\wd0}%
 }
-
-\newcommand{\ichfeedback}[1]{\todo[color=green!40,inline]{#1}}
-
-\newcommand{\chaptertodo}[1]{\todo[color=magenta!40,inline]{#1}}
 
 \newcommand{\newpagefill}{
 	\vfill
