--- a/latex/report_refs.tex
+++ b/latex/report_refs.tex
@@ -78,6 +78,8 @@
 \newcommand{\secondarycitedirect}[2]{\secondaryciteauthor{#1} (\secondaryciteyear{#1}, cited in \secondaryciteauthor{#2}, \secondaryciteyear{#2})}
 \newcommand{\secondaryciteindirect}[2]{(\secondaryciteauthor{#1}, \secondaryciteyear{#1}, cited in \secondaryciteauthor{#2}, \secondaryciteyear{#2})}
 
+\renewcommand*{\postvolpunct}{\addcolon\addspace}
+
 \newcounter{note}
 \newcommand{\note}[1] {
     \stepcounter{note}
@@ -198,19 +200,212 @@
 
 \textcite{bettertfres2}
 
+\textcite{sisec2016}
+
+\textcite{otherdataset2}
+
+\textcite{warpedcomparison}
+
+\textcite{warpedpsycho}
+
+\textcite{xumx}
+
+\textcite{randomgrid}
+
+\textcite{moore}
+
+\textcite{shannon1948}
+
+\textcite{nyquist1928}
+
+\textcite{sdruseful}
+
+\textcite{fourierhistory}
+
+\textcite{fouriermusic}
+
+\textcite{fourierhist1}
+
+\textcite{fourierhist2}
+
+\textcite{fourierheat}
+
+\textcite{jaillet}
+
+\textcite{tfjigsaw}
+
+\textcite{wmdct}
+
+\textcite{gausshist}
+
+\textcite{skiena}
+
+\textcite{ffttopten}
+
+\textcite{korpel}
+
+\textcite{carsonfamous}
+
+\textcite{homage1}
+
+\textcite{hallm}
+
+\textcite{heisenberg1927}
+
+\textcite{gabor2}
+
+\textcite{doerflersouls}
+
+\textcite{msp}
+
+\textcite{westernpitch1}
+
+\textcite{westernpitch2}
+
+\textcite{geometriclog}
+
+\textcite{cola}
+
+\textcite{bss}
+
+\textcite{fitzgerald2}
+
+\textcite{wavelets}
+
+\textcite{driedger}
+
+\textcite{musicseptechniques1}
+
+\textcite{umx}
+
+\textcite{jbrown}
+
+\textcite{balazs}
+
+\textcite{doerflerphd}
+
+\textcite{framesintro}
+
+\textcite{gabor1946}
+
+\textcite{musicsepgood}
+
+\textcite{convtranspose}
+
+\textcite{audiocnn3}
+
+\textcite{tftradeoff1}
+
+\textcite{mdx21}
+
+\textcite{convguide}
+
+\textcite{blind2}
+
+\textcite{waveunet}
+
+\textcite{endtoend}
+
+\textcite{rnns}
+
+\textcite{deepcpuinf2}
+
+\textcite{deepcpuinf}
+
+\textcite{gru1}
+
+\textcite{birnn}
+
+\textcite{noisyphase2}
+
+\textcite{noisyphase1}
+
+\textcite{roux2018sdr}
+
+\textcite{ica1}
+
+\textcite{ica2}
+
+\textcite{musicseptechniques2}
+
+\textcite{speechsep}
+
+\textcite{boyd2004convex}
+
+\textcite{gitbook}
+
+\textcite{statisticalsp}
+
+\textcite{introtodl}
+
+\textcite{mlopt1}
+
+\textcite{frametheory}
+
+\textcite{blind1}
+
+\textcite{nmfpaper}
+
+\textcite{musicsp}
+
+\textcite{blind2}
+
+\textcite{introtoml}
+
+\textcite{mlopt2}
+
+\textcite{sgd}
+
+\textcite{optsp}
+
+\textcite{stochasticsp}
+
+\textcite{mlsp1}
+
+\textcite{mlsp2}
+
+\textcite{ndarrayfast}
+
+\textcite{audiodeeplearning}
+
+\textcite{sisec2018}
+
+\textcite{wiener2}
+
+\textcite{wiener3}
+
+\textcite{wiener4}
+
+\textcite{floss}
+
+\textcite{nlpml}
+
+\textcite{cvml}
+
+\textcite{generalai}
+
+\textcite{cnns}
+
+\textcite{seq2seqs}
+
+\textcite{ditchphase}
+
+\textcite{mldspmix}
+
+\textcite{lstm1}
+
+\textcite{lstmrnngru}
+
+\textcite{umxorig1}
+
+\textcite{umxorig2}
+
+\textcite{tcn}
+
 \newpagefill
 
 %\nocite{*}
 \section{References}
 \printbibliography[heading=none]
-
-%\newpagefill
-%
-%\begin{appendices}
-%
-%\section{Code availability and replicating the results}
-%\label{appendix:coderesultsrepro}
-%
-%\end{appendices}
 
 \end{document}
