--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -81,6 +81,14 @@ journal = {Methods in Molecular Biology},
 doi = {10.1007/978-1-62703-748-8_7}
 }
 
+@book{pythonscience,
+author = {Bayen, Alexandre and Kong, Qingkai and Siauw, Timmy},
+title = {Python programming and numerical methods: a guide for engineers and scientists},
+year = {2020},
+publisher = {Elsevier},
+edition = {1},
+}
+
 @article{randomgrid,
   author  = {James Bergstra and Yoshua Bengio},
   title   = {Random Search for Hyper-Parameter Optimization},
@@ -204,7 +212,7 @@ title = {Pro Git},
 year = {2014},
 isbn = {1484200772},
 publisher = {Apress},
-edition = {2nd},
+edition = {2},
 url = {https://git-scm.com/book/en/v2}
 }
 
@@ -351,6 +359,14 @@ title = {Arbitrary phase vocoders by means of warping},
 volume = {7},
 journal = {Musica/Tecnologia},
 doi = {10.13128/Music_Tec-13210}
+}
+
+@techreport{2dconv,
+author = {Fedorishin, Dennis and Sankaran, Nishant and Mohan, Deen and Birgiolas, Justas and Schneider, Philip and Setlur, Srirangaraj, and Govindaraju, Venu},
+title = {Investigating waveform and spectrogram feature fusion for acoustic scene classification},
+year = {2021},
+institution = {Detection and Classification of Acoustic Scenes and Events 2021},
+url = {http://dcase.community/documents/challenge2021/technical_reports/DCASE2021_Fedorishin_97_t1.pdf}
 }
 
 @inproceedings{fitzgerald1,
@@ -687,7 +703,7 @@ doi = {10.1007/978-981-15-9712-1_31}
                Hakan Erdogan and
                Brian Patton and
                Kevin W. Wilson and
-               Jonathan Le Roux and
+               Jonathan {Le Roux} and
                John R. Hershey},
   title     = {Universal sound separation},
   booktitle = {2019 {IEEE} Workshop on Applications of Signal Processing to Audio
@@ -696,6 +712,19 @@ doi = {10.1007/978-981-15-9712-1_31}
   publisher = {{IEEE}},
   year      = {2019},
   doi       = {10.1109/WASPAA.2019.8937253},
+}
+
+@article{Kessy_2018,
+   title={Optimal Whitening and Decorrelation},
+   volume={72},
+   ISSN={1537-2731},
+   %url={http://dx.doi.org/10.1080/00031305.2016.1277159},
+   DOI={10.1080/00031305.2016.1277159},
+   number={4},
+   journal={The American Statistician},
+   author={Kessy, Agnan and Lewin, Alex and Strimmer, Korbinian},
+   year={2018},
+   pages={309--314}
 }
 
 @inbook{sgd,
@@ -720,6 +749,17 @@ doi = {10.1007/978-1-4842-2766-4_8}
    author={Khan, Asifullah and Sohail, Anabia and Zahoora, Umme and Qureshi, Aqsa Saeed},
    year={2020},
    pages={5455--5516}
+}
+
+@techreport{whatistensor,
+author = {Kolecki, Joseph},
+year = {2002},
+pages = {1--29},
+title = {An introduction to tensors for students of physics and engineering},
+institution = {NASA},
+number = {2002-211716},
+type = {Technical Memorandum},
+url = {https://ntrs.nasa.gov/citations/20020083040}
 }
 
 @article{korpel,
@@ -757,6 +797,17 @@ isbn = {0199660344},
 publisher = {Oxford University Press},
 edition = {1},
 address = {USA},
+}
+
+@inbook{pseudorng,
+author = {L'Ecuyer, Pierre},
+year = {2010},
+title = {Pseudorandom number generators},
+booktitle = {Encyclopedia of Quantitative Finance},
+editor = {Cont, R.},
+isbn = {9780470061602},
+pages = {1431--1437},
+doi = {10.1002/9780470061602.eqf13003},
 }
 
 @inproceedings{mlopt2,
@@ -1028,6 +1079,15 @@ isbn = {9783642550164}
   year      = {2018},
 journal={arXiv preprint arXiv:1806.05791},
   url       = {http://arxiv.org/abs/1806.05791},
+}
+
+@article{erblet,
+  title={The ERBlet transform: an auditory-based time-frequency representation with perfect reconstruction},
+  author={Thibaud Necciari and P. Balazs and Nicki Holighaus and Peter L. S{\o}ndergaard},
+  journal={IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  year={2013},
+  pages={498--502},
+  url={https://ltfat.org/notes/ltfatnote027.pdf}
 }
 
 @article{bettertfres2,
@@ -1440,6 +1500,18 @@ journal = {Signal Processing},
 doi = {10.1016/j.sigpro.2007.01.016}
 }
 
+@incollection{barktan,
+ booktitle={Handbook of Signal Processing in Acoustics},
+ editor={Havelock, David and Kuwano, Sonoko and Vorl{\"a}nder, Michael},
+ title={Estimation of speech intelligibility and quality},
+ author={Voran, Stephen},
+ chapter={28},
+ year={2008},
+ pages={483--520},
+ publisher={Springer},
+ doi={10.1007/978-0-387-30441-0_28}
+}
+
 @inproceedings{warpedcomparison,
 author={Stefan Wabnik and Gerald Schuller and Ulrich Kr{\"a}mer and Jens Hirschfeld},
 booktitle={Proceedings of IEEE International Conference on Acoustics, Speech, and Signal Processing},
@@ -1462,7 +1534,7 @@ doi = {10.1109/MCSE.2011.37}
 
 @article{noisyphase1,
       title={WHAM!: extending speech separation to noisy environments}, 
-      author={Gordon Wichern and Joe Antognini and Michael Flynn and Licheng Richard Zhu and Emmett McQuinn and Dwight Crow and Ethan Manilow and Jonathan Le Roux},
+      author={Gordon Wichern and Joe Antognini and Michael Flynn and Licheng Richard Zhu and Emmett McQuinn and Dwight Crow and Ethan Manilow and Jonathan {Le Roux}},
       year={2019},
   journal={arXiv preprint arXiv:1907.01160},
   url={https://arxiv.org/abs/1907.01160},
@@ -1492,6 +1564,17 @@ year={2019},
 pages={331--344},
 doi={10.1109/HPCA.2019.00048}}
 
+@article{splitvaliddata,
+author = {Xu, Yun and Goodacre, Royston},
+year = {2018},
+title = {On splitting training and validation set: a comparative study of cross-validation, bootstrap and systematic sampling for estimating the generalization performance of supervised learning},
+volume = {2},
+number = {3},
+pages = {249--262},
+journal = {Journal of Analysis and Testing},
+doi = {10.1007/s41664-018-0068-2}
+}
+
 @article{seq2seqs,
 author = {Yousuf, Hana and Gaid, Michael and Salloum, Said and Shaalan, Khaled},
 year = {2020},
@@ -1516,91 +1599,3 @@ doi = {10.11591/ijece.v11i3.pp2315-2326}
     %url = {https://doi.org/10.1162/neco\_a\_01199},
     %eprint = {https://direct.mit.edu/neco/article-pdf/31/7/1235/1053200/neco\_a\_01199.pdf},
 }
-
-%%%%%%%%%%%%%%
-% REVIEWED ^ %
-%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%
-% TODO     v %
-%%%%%%%%%%%%%%
-
-@techreport{2dconv,
-author = {Fedorishin, Dennis and Sankaran, Nishant and Mohan, Deen and Birgiolas, Justas and Schneider, Philip and Setlur, Srirangaraj, and Govindaraju, Venu},
-title = {Investigating Waveform and Spectrogram Feature Fusion for Acoustic Scene Classification},
-year = {2021},
-institution = {Detection and Classification of Acoustic Scenes and Events 2021},
-url = {http://dcase.community/documents/challenge2021/technical_reports/DCASE2021_Fedorishin_97_t1.pdf}
-}
-
-@article{fiftyyears,
-  title={Fifty years of signal processing: The ieee signal processing society and its technologies 1948-1998},
-  author={Nebeker, N},
-  journal={The IEEE Signal Processing Society},
-  year={1998}
-}
-
-@article{erblet,
-  title={The ERBlet transform: An auditory-based time-frequency representation with perfect reconstruction},
-  author={Thibaud Necciari and P. Balazs and Nicki Holighaus and Peter L. S{\o}ndergaard},
-  journal={2013 IEEE International Conference on Acoustics, Speech and Signal Processing},
-  year={2013},
-  pages={498-502},
-  url={https://ltfat.org/notes/ltfatnote027.pdf}
-}
-
-@incollection{barktan,
- booktitle={Handbook of Signal Processing in Acoustics},
- editor={Havelock, David and Kuwano, Sonoko and Vorl{\"a}nder, Michael},
- title={Estimation of Speech Intelligibility and Quality},
- author={Voran, Stephen},
- chapter={28},
- year={2008},
- publisher={Springer}
-}
-
-@article{splitvaliddata,
-author = {Xu, Yun and Goodacre, Royston},
-year = {2018},
-pages = {},
-title = {On Splitting Training and Validation Set: A Comparative Study of Cross-Validation, Bootstrap and Systematic Sampling for Estimating the Generalization Performance of Supervised Learning},
-volume = {2},
-journal = {Journal of Analysis and Testing},
-doi = {10.1007/s41664-018-0068-2}
-}
-
-@article{Kessy_2018,
-   title={Optimal Whitening and Decorrelation},
-   volume={72},
-   ISSN={1537-2731},
-   url={http://dx.doi.org/10.1080/00031305.2016.1277159},
-   DOI={10.1080/00031305.2016.1277159},
-   number={4},
-   journal={The American Statistician},
-   publisher={Informa UK Limited},
-   author={Kessy, Agnan and Lewin, Alex and Strimmer, Korbinian},
-   year={2018},
-   pages={309–314}
-}
-
-@book{pythonscience,
-author = {Bayen, Alexandre and Kong, Qingkai and Siauw, Timmy},
-title = {Python Programming and Numerical Methods: A Guide for Engineers and Scientists},
-year = {2020},
-publisher = {Elsevier},
-}
-
-@article{whatistensor,
-author = {Kolecki, Joseph},
-year = {2002},
-title = {An Introduction to Tensors for Students of Physics and Engineering}
-}
-
-@inbook{pseudorng,
-author = {L’Ecuyer, Pierre},
-year = {2010},
-title = {Pseudorandom Number Generators},
-isbn = {9780470061602},
-doi = {10.1002/9780470061602.eqf13003}
-}
-
