--- a/latex/report_refs.tex
+++ b/latex/report_refs.tex
@@ -402,6 +402,22 @@
 
 \textcite{tcn}
 
+\textcite{2dconv}
+
+\textcite{erblet}
+
+\textcite{barktan}
+
+\textcite{splitvaliddata}
+
+\textcite{Kessy_2018}
+
+\textcite{pythonscience}
+
+\textcite{whatistensor}
+
+\textcite{pseudorng}
+
 \newpagefill
 
 %\nocite{*}
