Begin stub of plotting section

--- a/latex/ch3.tex
+++ b/latex/ch3.tex
@@ -314,6 +314,11 @@ The overlap-add procedure for the matrix form of the sliCQT operates on the whol
 
 \newpagefill
 
+\subsubsection{Spectrogram plotting utility}
+\label{sec:slicqspec}
+
+\newpagefill
+
 \subsection{Choosing sliCQT parameters}
 \label{sec:slicqparamsrch}
 
