--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -104,7 +104,7 @@ edition = {1},
 author = {{Beysolow II}, Taweh},
 year = {2017},
 publisher = {Apress},
-title = {Introduction to Deep Learning in R},
+title = {Introduction to deep learning in R},
 isbn = {978-1-4842-2733-6},
 doi = {10.1007/978-1-4842-2734-3_1}
 }
@@ -938,7 +938,7 @@ number = {CS-91-144}
 @article{warped1,
 author={Anamitra Makur and Sanjit K. Mitra},
 journal={IEEE Transactions on Circuits and Systems I: Fundamental Theory and Applications},
-title={Warped discrete-Fourier transform: Theory and applications},
+title={Warped discrete-Fourier transform: theory and applications},
 year={2001},
 volume={48},
 number={9},
@@ -948,7 +948,7 @@ doi={10.1109/81.948436}}
 @article{warped2,
 author={Anamitra Makur},
 journal={IEEE Transactions on Circuits and Systems I: Regular Papers},
-title={Computational Schemes for Warped DFT and Its Inverse},
+title={Computational schemes for warped DFT and its inverse},
 year={2008},
 volume={55},
 number={9},
@@ -1015,7 +1015,7 @@ edition={International},
 @article{mdx21,
 author = {Mitsufuji, Yuki and Fabbro, Giorgio and Uhlich, Stefan and Stöter, Fabian-Robert},
 year = {2021},
-title = {Music Demixing Challenge at ISMIR 2021},
+title = {Music demixing challenge at ISMIR 2021},
 journal={arXiv preprint arXiv:2108.13559},
 url={https://arxiv.org/abs/2108.13559}
 }
@@ -1123,7 +1123,7 @@ doi = {10.1109/EUSIPCO.2016.7760548}
 @article{nyquist1928,
 author={Harry {Nyquist}},
 journal={Transactions of the American Institute of Electrical Engineers},
-title={Certain Topics in Telegraph Transmission Theory},
+title={Certain topics in telegraph transmission theory},
 year={1928},
 volume={47},
 number={2},
@@ -1331,7 +1331,7 @@ doi = {10.1109/JPROC.2010.2040551},
 }
 
 @article{xumx,
-  title={All for One and One for All: Improving Music Separation by Bridging Networks}, 
+  title={All for one and one for all: improving music separation by bridging networks}, 
   author={Ryosuke Sawata and Stefan Uhlich and Shusuke Takahashi and Yuki Mitsufuji},
   year={2021},
   journal={arXiv preprint arXiv:2010.04228},
@@ -1418,7 +1418,7 @@ url={https://arxiv.org/abs/1504.07372}
 }
 
 @article{waveunet,
-      title={Wave-U-Net: A Multi-Scale Neural Network for End-to-End Audio Source Separation}, 
+      title={Wave-U-Net: a multi-scale neural network for end-to-end audio source separation}, 
       author={Stoller, Daniel and Ewert, Sebastian and Dixon, Simon},
       year={2018},
   journal={arXiv preprint arXiv:1806.03185},
